# uv-migration-tests

./: .gitignore  CHANGELOG.md  cliff.toml  pyproject.toml
.github/workflows/: commit_checks.yaml  coverage.yaml  pr_checks.yaml  release.yaml  test.yaml
src/project_name/: __init__.py
src/uv_migration_tests/: __init__.py
tests/: test_example.py
