[project]
name = "uv-migration-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Artur Borecki", email = "me@pufereq.pl" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
bump = [
    "git-cliff>=2.9.1",
    "python-semantic-release>=10.2.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-github-actions-annotate-failures>=0.3.0",
    "pytest-mock>=3.14.1",
]
